@@ -16,9 +16,6 @@
 package org.esa.snap.core.dataio.dimap;
 
 import com.bc.ceres.core.ProgressMonitor;
-import junit.framework.Test;
-import junit.framework.TestCase;
-import junit.framework.TestSuite;
 import org.esa.snap.GlobalTestConfig;
 import org.esa.snap.GlobalTestTools;
 import org.esa.snap.core.datamodel.Band;
@@ -26,40 +23,38 @@ import org.esa.snap.core.datamodel.Product;
 import org.esa.snap.core.datamodel.ProductData;
 import org.esa.snap.core.util.BeamConstants;
 import org.esa.snap.core.util.io.FileUtils;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
 
 import javax.imageio.stream.FileImageInputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 
-public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
+import static org.junit.Assert.*;
+
+public class DimapProductWriterTest_WriteBandRasterData {
 
     private final DimapProductWriterPlugIn _writerPlugIn = new DimapProductWriterPlugIn();
     private DimapProductWriter _productWriter;
     private File _outputDir;
     private File _outputFile;
 
-    public DimapProductWriterTest_WriteBandRasterData(String testName) {
-        super(testName);
-    }
-
-    public static Test suite() {
-        return new TestSuite(DimapProductWriterTest_WriteBandRasterData.class);
-    }
-
-    @Override
-    protected void setUp() {
+    @Before
+    public void setUp() {
         GlobalTestTools.deleteTestDataOutputDirectory();
         _productWriter = (DimapProductWriter) _writerPlugIn.createWriterInstance();
         _outputDir = new File(GlobalTestConfig.getSnapTestDataOutputDirectory(), "testproduct");
         _outputFile = new File(_outputDir, "testproduct" + DimapProductConstants.DIMAP_HEADER_FILE_EXTENSION);
     }
 
-    @Override
-    protected void tearDown() {
+    @After
+    public void tearDown() {
         GlobalTestTools.deleteTestDataOutputDirectory();
     }
 
+    @Test
     public void testWriteBandRasterData() throws IOException {
         int sceneWidth = 16;
         int sceneHeight = 12;
@@ -68,7 +63,7 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         int sourceWidth = sceneWidth - 2;
         int sourceHeight = sceneHeight - 2;
         Product product = new Product("name", BeamConstants.MERIS_FR_L1B_PRODUCT_TYPE_NAME,
-                                      sceneWidth, sceneHeight);
+                sceneWidth, sceneHeight);
         Band band = new Band("band", ProductData.TYPE_INT8, sceneWidth, sceneHeight);
         product.addBand(band);
 
@@ -76,7 +71,7 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         _productWriter.writeProductNodes(product, _outputFile);
         ProductData sourceBuffer = getFilledSourceData(sourceWidth * sourceHeight);
         _productWriter.writeBandRasterData(band, offsetX, offsetY, sourceWidth, sourceHeight, sourceBuffer,
-                                           ProgressMonitor.NULL);
+                ProgressMonitor.NULL);
         _productWriter.close();
 
         byte[] expectedArray = prepareExpectedArrayInt8(sceneWidth, sceneHeight);
@@ -88,11 +83,12 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         }
     }
 
+    @Test
     public void testWriteBandRasterData_SourceBuffer_toSmall() {
         int sceneWidth = 16;
         int sceneHeight = 12;
         Product product = new Product("name", BeamConstants.MERIS_FR_L1B_PRODUCT_TYPE_NAME,
-                                      sceneWidth, sceneHeight);
+                sceneWidth, sceneHeight);
         Band band = new Band("band", ProductData.TYPE_INT8, sceneWidth, sceneHeight);
         product.addBand(band);
 
@@ -114,11 +110,12 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         }
     }
 
+    @Test
     public void testWriteBandRasterData_SourceBuffer_toBig() {
         int sceneWidth = 16;
         int sceneHeight = 12;
         Product product = new Product("name", BeamConstants.MERIS_FR_L1B_PRODUCT_TYPE_NAME,
-                                      sceneWidth, sceneHeight);
+                sceneWidth, sceneHeight);
         Band band = new Band("band", ProductData.TYPE_INT8, sceneWidth, sceneHeight);
         product.addBand(band);
 
@@ -140,11 +137,12 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         }
     }
 
+    @Test
     public void testWriteBandRasterData_SourceRegionIsOutOfBandsRaster() {
         int sceneWidth = 16;
         int sceneHeight = 12;
         Product product = new Product("name", BeamConstants.MERIS_FR_L1B_PRODUCT_TYPE_NAME,
-                                      sceneWidth, sceneHeight);
+                sceneWidth, sceneHeight);
         Band band = new Band("band", ProductData.TYPE_INT8, sceneWidth, sceneHeight);
         product.addBand(band);
 
@@ -160,9 +158,9 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
             ProductData sourceBuffer = getSourceData(sceneWidth * sceneHeight);
             int makeOutside = -1;
             _productWriter.writeBandRasterData(band,
-                                               makeOutside, 0,
-                                               sceneWidth, sceneHeight,
-                                               sourceBuffer, ProgressMonitor.NULL);
+                    makeOutside, 0,
+                    sceneWidth, sceneHeight,
+                    sourceBuffer, ProgressMonitor.NULL);
             fail("IllegalArgumentException expected because region is ot of band's region");
         } catch (IOException e) {
             e.printStackTrace();
@@ -175,9 +173,9 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
             ProductData sourceBuffer = getSourceData(sceneWidth * sceneHeight);
             int makeOutside = -1;
             _productWriter.writeBandRasterData(band,
-                                               0, makeOutside,
-                                               sceneWidth, sceneHeight,
-                                               sourceBuffer, ProgressMonitor.NULL);
+                    0, makeOutside,
+                    sceneWidth, sceneHeight,
+                    sourceBuffer, ProgressMonitor.NULL);
             fail("IllegalArgumentException expected because region is ot of band's region");
         } catch (IOException e) {
             e.printStackTrace();
@@ -190,9 +188,9 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
             ProductData sourceBuffer = getSourceData(sceneWidth * sceneHeight);
             int makeOutside = 1;
             _productWriter.writeBandRasterData(band,
-                                               makeOutside, 0,
-                                               sceneWidth, sceneHeight,
-                                               sourceBuffer, ProgressMonitor.NULL);
+                    makeOutside, 0,
+                    sceneWidth, sceneHeight,
+                    sourceBuffer, ProgressMonitor.NULL);
             fail("IllegalArgumentException expected because region is ot of band's region");
         } catch (IOException e) {
             e.printStackTrace();
@@ -205,9 +203,9 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
             ProductData sourceBuffer = getSourceData(sceneWidth * sceneHeight);
             int makeOutside = 1;
             _productWriter.writeBandRasterData(band,
-                                               0, makeOutside,
-                                               sceneWidth, sceneHeight,
-                                               sourceBuffer, ProgressMonitor.NULL);
+                    0, makeOutside,
+                    sceneWidth, sceneHeight,
+                    sourceBuffer, ProgressMonitor.NULL);
             fail("IllegalArgumentException expected because region is ot of band's region");
         } catch (IOException e) {
             e.printStackTrace();
@@ -261,7 +259,7 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
 
     private byte[] getCurrentByteArray(Band band) {
         FileImageInputStream inputStream = createInputStream(band);
-        int fileLength = new Long(inputStream.length()).intValue();
+        int fileLength = Long.valueOf(inputStream.length()).intValue();
         byte[] currentBytes = new byte[fileLength];
         try {
             inputStream.readFully(currentBytes);
@@ -278,7 +276,7 @@ public class DimapProductWriterTest_WriteBandRasterData extends TestCase {
         final String nameWithoutExtension = FileUtils.getFilenameWithoutExtension(_outputFile);
         File dataDir = new File(_outputDir, nameWithoutExtension + ".data");
         File file = new File(dataDir, band.getName() + DimapProductConstants.IMAGE_FILE_EXTENSION);
-        assertEquals(true, file.exists());
+        assertTrue(file.exists());
         FileImageInputStream inputStream = null;
         try {
             inputStream = new FileImageInputStream(file);
